# de-zoomcamp-project

./: README.md  pyproject.toml
nyc_bus/: transform.py
tests/: test_transform.py
workflow/dbt/nyc_bus/: dbt_project.yml  packages.yml
workflow/dbt/nyc_bus/macros/: get_day_of_week_from_number.sql
workflow/dbt/nyc_bus/models/marts/: bus_delays.sql  delay_per_line_stop_weekday.sql  delay_per_line_weather.sql  schema.yml
workflow/dbt/nyc_bus/models/staging/: schema.yml  stg_bus_records.sql  stg_humidity.sql  stg_nyc_bus.sql  stg_temperature.sql  stg_weather_description.sql
workflow/orchestration/: elt_kaggle_to_bq.py  elt_kaggle_to_gcs.py
workflow/orchestration/deployments/: kaggle-to-gcs.yaml
workflow/prefect/: elt_kaggle_to_bq.py  etl_kaggle_to_bq.py  trigger_dbt.py  upload_bus_data.py  upload_weather_data.py  utils.py
workflow/prefect/deployments/: kaggle-to-gcs.yaml
workflow/terraform/: main.tf  variables.tf
